[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
rsa = "0.5.0"
aes = "0.7.5"
rand = "0.8.4"
hex = "0.4.3"
tokio = {version = "1.14.0", features = ["full"]}
futures = "*"