[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[[bin]]
name = "blockchain-messenger"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
rsa = "0.5.0"
aes = "0.7.5"
rand = "0.8.4"
hex = "0.4.3"
tokio = {version = "1.14.0", features = ["full"]}
futures = "0.3.18"
serde = {version = "1.0.59", features = ["derive"]}
bincode = {version = "1.3.3"}